test/files/neg/t5580a.check
t5580a.scala:9: error: polymorphic expression cannot be instantiated to expected type;
 found   : [A]collection.mutable.Set[A]
 required: collection.mutable.Map[bar,collection.mutable.Set[bar]]
    if (map.get(tmp).isEmpty) map.put(tmp,collection.mutable.Set())
                                                                ^
one error found
